# science-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.demo_store/agent_b202f49765f4/: events.jsonl  info.json  messages.json  todos.json  tool_calls.json
.resume_store/persistent-agent/: events.jsonl  info.json  messages.json
docker/: .env.example  README.md  compose.yaml
docs/: README.md  configuration.md  infrastructure.md  storage.md  verification.md  wiki.md
examples/: getting_started.py  knowledge_workflow.py  persistence_resume.py  postgres_persistence.py  real_usage.py  tool_usage.py  wiki_knowledge_layer.py
src/science_agent/: __init__.py  config.py  errors.py  types.py
src/science_agent/agent_runtime/: approval.py  breakpoint_manager.py  message_queue.py  permission_manager.py  tool_runner.py
src/science_agent/core/: agent.py  context_manager.py  events.py  permission_modes.py  template.py  todo.py
src/science_agent/infra/: __init__.py  sandbox.py  sandbox_factory.py
src/science_agent/knowledge/: __init__.py  ingestion.py  policy.py  ports.py  query.py  rendering.py  types.py
src/science_agent/rag/: __init__.py  chunking.py  ports.py  rendering.py  retrieval.py  routing.py  service.py  types.py
src/science_agent/tools/: __init__.py  base.py  builtin.py  define.py  fs_read.py  fs_write.py  knowledge.py  knowledge_ingest.py  knowledge_search.py  rag.py  (+7 more)
tests/: __init__.py  store_contract.py
tests/integration/: __init__.py  test_postgres_store.py
tests/unit/: test_agent_basic.py  test_knowledge.py  test_multimodal_rag.py  test_openai_provider.py  test_rag.py  test_store_and_tools.py  test_store_contract.py  test_wiki.py
(+55 files in other folders)
