[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "science-agent"
version = "0.1.0"
description = "Phase-one Python skeleton for an event-driven agent SDK"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/science_agent"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp_run"
