[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "science-agent"
version = "0.1.0"
description = "Phase-one Python skeleton for an event-driven agent SDK"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "panda_eyes" }]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
rag = [
  "docling>=2.0,<3",
  "pymupdf>=1.24,<2",
  "pymilvus>=2.5,<3",
]
postgres = [
  "psycopg[binary,pool]>=3.2,<4",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
]

[project.scripts]
science-agent-migrate = "science_agent.infra.store.postgres.migrate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/science_agent"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp_run"
